--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,20 @@
+html, body
+{
+    height: 100vh;
+}
+
 body {
     font-size: 16px;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+
+    display: flex;
+    flex-direction: column;
 }
 
 main{
-    width: 100%;
+    flex: 1;
 
     display: flex;
     flex-direction: column;
