--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,14 +1,25 @@
 header{
     display: flex;
+
     background-color: white;
+    flex-wrap: wrap;
 }
 
 header > *{
-    flex: 0.3;
     padding-bottom: 0.5rem;
 }
 
 #header-logo{
+    align-self: center;
+
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+
+    padding-left: 4rem;
+}
+
+#header-logo > span{
     align-self: center;
     text-align: center;
 
@@ -26,8 +37,7 @@ header > *{
 }
 
 #search-bar{
-    flex: 1;
-
+    width: 60%;
     display: flex;
     justify-content: center;
 }
@@ -38,5 +48,32 @@ header > *{
 }
 
 #language-select{
-    text-align: right;
+    flex:1;
+
+    align-self: center;
+    text-align: center;
+
+    display: flex;
+    gap: 4rem;
+}
+
+#language-select > *{
+    cursor: pointer;
+    height: auto;
+
+    align-self: center;
+}
+
+.search-container{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    background-image: url("../assets/decor-frame.svg");
+    background-repeat: no-repeat;
+    background-position: center;
 }
