--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 html, body
 {
-    height: 100vh;
+    height: 100%;
 }
 
 body {
@@ -13,9 +13,13 @@ body {
     flex-direction: column;
 }
 
-main{
-    flex: 1;
+#root {
+    height: 100%;
+    width: 100%;
+}
 
+#root > main{
+    min-height: 84%;
     display: flex;
     flex-direction: column;
     background: linear-gradient(252.44deg, #7878B4 0%, #383B71 100%);
