--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,69 +1,68 @@
-footer{
-    min-height: 16%;
-    
-    display: flex;
+footer {
+  min-height: 16%;
 
-    padding-top: 2rem;
-    
-    text-align: center;
-    color: white;
-    background: #33304B;
+  display: flex;
+
+  padding-top: 2rem;
+
+  text-align: center;
+  color: white;
+  background: #33304b;
 }
 
 footer > * {
-    flex: 1;
+  flex: 1;
 }
 
-#logo-copyright > h1{
-    font-family: 'Sumana';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 4rem;
+#logo-copyright > h1 {
+  font-family: "Sumana";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 4rem;
 
-    background: linear-gradient(252.44deg, #7878B4 0%, #383B71 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+  background: linear-gradient(252.44deg, #7878b4 0%, #383b71 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
 
-#logo-copyright > p{
-    font-size: 0.6rem;
+#logo-copyright > p {
+  font-size: 0.6rem;
 }
 
-#legal-mention{
-    flex: 2;
-    align-self: center;
+#legal-mention {
+  flex: 2;
+  align-self: center;
 }
 
 #legal-mention > p {
-    margin: 0;
-    align-self: center;
-    color: #B5B6D1;
+  margin: 0;
+  align-self: center;
+  color: #b5b6d1;
 }
 
+#developpers-mention {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
 
-#developpers-mention{
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 2rem;
-
-    gap: 0.4rem;
+  gap: 0.4rem;
 }
 
-#developpers-mention > *{
-    flex: 1;
+#developpers-mention > * {
+  flex: 1;
 
-    display: flex;
-    padding-left: 8rem;
-    gap: 0.4rem;
+  display: flex;
+  padding-left: 8rem;
+  gap: 0.4rem;
 }
 
-#developpers-mention > * > a{
-    align-self: center;
+#developpers-mention > * > a {
+  align-self: center;
 }
 
-#developpers-mention > * > span{
-    flex: 1;
-    text-align: left;
-    align-self: center;
+#developpers-mention > * > span {
+  flex: 1;
+  text-align: left;
+  align-self: center;
 }
