--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,29 @@
-html, body
-{
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 #root {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
-#root > main{
-    min-height: 84%;
-    display: flex;
-    flex-direction: column;
-    background: linear-gradient(252.44deg, #7878B4 0%, #383B71 100%);
-    
-    padding-top: 4rem;
-    padding-bottom: 3.6rem;
+#root > main {
+  min-height: 84%;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(252.44deg, #7878b4 0%, #383b71 100%);
+
+  padding-top: 4rem;
+  padding-bottom: 3.6rem;
 }
