--- a/src/styles/GameHistoryCard.css
+++ b/src/styles/GameHistoryCard.css
@@ -1,124 +1,122 @@
-.game-history-card{
-    width: 680px;
-    height: 120px;
-    display: flex;
+.game-history-card {
+  width: 680px;
+  height: 120px;
+  display: flex;
 
-    background-color: white;
+  background-color: white;
 }
 
-.game-history-card:hover{
-    cursor: pointer;
+.game-history-card:hover {
+  cursor: pointer;
 }
 
-.game-history-card > *{
-    flex: 1;
+.game-history-card > * {
+  flex: 1;
 
-    display: flex;
+  display: flex;
 
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 
 /* CHAMP LANE CARD */
 
-.game-history-card-champ-lane{
-    display: block;
-    height: 118px;
-    width: 200px;
+.game-history-card-champ-lane {
+  display: block;
+  height: 118px;
+  width: 200px;
 }
 
-.champ-container{
-    height: 7.375rem; /* 118px */
-    width: 12.5rem; /* 200px */
+.champ-container {
+  height: 7.375rem; /* 118px */
+  width: 12.5rem; /* 200px */
 
-    display: flex;
+  display: flex;
 
-    align-items: center;
-    justify-content: center;
-    
-    overflow: hidden;
+  align-items: center;
+  justify-content: center;
+
+  overflow: hidden;
 }
 
-.champ-img{
-    height: 300%;
-    -webkit-transform : translate(-1.5rem, 4.5rem);
+.champ-img {
+  height: 300%;
+  -webkit-transform: translate(-1.5rem, 4.5rem);
 }
 
-.lane-container{
-    height: 3rem;
-    width: 3rem;
+.lane-container {
+  height: 3rem;
+  width: 3rem;
 
-    display: flex;
+  display: flex;
 
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 
-    position: relative;
+  position: relative;
 
-    background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 
-    -webkit-transform : translate(9.5rem, -3rem);
+  -webkit-transform: translate(9.5rem, -3rem);
 }
-.lane-img{
-    height: 2.5rem;
-    width: 2.5rem;
+.lane-img {
+  height: 2.5rem;
+  width: 2.5rem;
 }
 
 /* CARD SUMMONER */
 
-.game-history-card-summoners > *{
-    border: solid black 1px;
+.game-history-card-summoners > * {
+  border: solid black 1px;
 }
 
 /* CARD KDA ROLE */
 
-.game-history-card-summoners{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.game-history-card-summoners {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-.game-history-card-summoners > img{
-    height: 2rem;
-    width: 2rem;
-}
-
-.game-history-card-kda{
-    margin-left: 1rem;
-    
-    gap: 1rem;
-
-    padding-left: 1rem;
-    padding-right: 1rem;
+.game-history-card-summoners > img {
+  height: 2rem;
+  width: 2rem;
 }
 
-.game-history-card-kda > *{
-    height: 100%;
-    width: 100%;
+.game-history-card-kda {
+  margin-left: 1rem;
 
-    display: flex;
-    flex-direction: column;
-    
-    justify-content: space-around;
+  gap: 1rem;
+
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.game-history-card-kda > :first-of-type{
-    font-family: 'Sitka';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.3rem;
-    color: #383B71;
+.game-history-card-kda > * {
+  height: 100%;
+  width: 100%;
 
-    text-align: center;
+  display: flex;
+  flex-direction: column;
 
+  justify-content: space-around;
 }
 
-.game-history-card-kda > :last-of-type{
-    font-family: 'Sitka';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.3rem;
-    color: white;
+.game-history-card-kda > :first-of-type {
+  font-family: "Sitka";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.3rem;
+  color: #383b71;
 
-    text-align: center;
+  text-align: center;
+}
+
+.game-history-card-kda > :last-of-type {
+  font-family: "Sitka";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.3rem;
+  color: white;
+
+  text-align: center;
 }
