--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 html,
 body {
   height: 100%;
+  width: 100%;
+  min-width: fit-content;
 }
 
 body {
@@ -16,14 +18,4 @@ body {
 #root {
   height: 100%;
   width: 100%;
-}
-
-#root > main {
-  min-height: 84%;
-  display: flex;
-  flex-direction: column;
-  background: linear-gradient(252.44deg, #7878b4 0%, #383b71 100%);
-
-  padding-top: 4rem;
-  padding-bottom: 3.6rem;
 }
