fix bg color of input in firefox

--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -86,6 +86,7 @@ select {
 }
 
 #summoner-search {
+  background-color: inherit;
   border: none;
   outline: none;
 
@@ -114,7 +115,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active  {
-    -webkit-box-shadow: 0 0 0 40px white inset !important;
+    -webkit-box-shadow: 0 0 0 40px inherit inset !important;
 }
 
 #count-search-block > label {
