--- a/src/styles/ChampItems.css
+++ b/src/styles/ChampItems.css
@@ -37,10 +37,11 @@
 /* ALL ITEMS CONTAINER */
 
 #all-items-container {
+
   position: absolute;
 
-  width: 320px;
-  height: 680px;
+  width: 305px;
+  height: 658px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -118,15 +119,18 @@
   flex-direction: row;
 
   gap: 1rem;
+  width: 100%;
 }
 
 #fourth-fifth-items-container > * {
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
 .fourth-fifth-items-display-container {
+
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -148,4 +152,12 @@
 
 #sixth-items-display-container > :last-child {
   justify-content: center;
+}
+
+/* NTH ITEMS DISPLAY LAYOUT */
+
+.nth-items-container{
+  text-align: center;
+  font-size: 0.9rem;
+  font-weight: bold;
 }
