--- a/src/styles/ChampItems.css
+++ b/src/styles/ChampItems.css
@@ -45,18 +45,27 @@
   flex-direction: column;
   align-items: flex-start;
 
-  margin: 1rem;
-  margin-top: 2.5rem;
+  margin-left: 1rem;
+  padding-right: 1rem;
+
+
 
   gap: 2.6rem;
 }
 
+
 #all-items-container > * {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 
   gap: 0.5rem;
+}
+
+#all-items-container > :first-child{
+  margin-top: 2rem;
 }
 
 .items-title {
@@ -76,6 +85,13 @@
   color: #33304b;
 }
 
+.empty-items-container{
+  height: 100%;
+  font-style: italic;
+  display: flex;
+  text-align: center;
+  align-items: center;
+}
 /* ITEMS DISPLAY AREA */
 
 .items-display-area {
@@ -142,6 +158,8 @@
 }
 
 #fourth-fifth-items-container > * {
+  height: 100%;
+  
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -149,6 +167,8 @@
 }
 
 .fourth-fifth-items-display-container {
+  height: 100%;
+  
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -157,8 +177,11 @@
 /* SIXTH ITEMS LAYOUT */
 
 #sixth-items-display-container {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
+
+  margin-top: 0.5rem;
 
   row-gap: 0.5rem;
 }
