--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -44,8 +44,8 @@ footer > * {
 
 #developpers-mention {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
   margin-bottom: 2rem;
 
   gap: 0.4rem;
@@ -55,7 +55,7 @@ footer > * {
   flex: 1;
 
   display: flex;
-  gap: 0.4rem;
+  gap: 0.7rem;
 }
 
 #developpers-mention > * > a {
@@ -63,6 +63,7 @@ footer > * {
 }
 
 #developpers-mention > * > span {
+  min-width: 202px;
   flex: 1;
   text-align: left;
   align-self: center;
