Add return home onClick on header's logo

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -24,6 +24,10 @@ header > * {
   gap: 2rem;
 }
 
+#header-logo:hover {
+  cursor: pointer;
+}
+
 #header-logo > span {
   align-self: center;
   text-align: center;
